set up socket.io and made sure it could recognize clients connecting to it

--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <h1>Felipe</h1>
+    <!-- Client side socket.io library -->
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/chat.js"></script>
 </body>
 </html>
