--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     <h1>Felipe</h1>
+    <button id="increment">Click me</button>
+
+
     <!-- Client side socket.io library -->
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
