Client broadcast messages

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,10 @@
 </head>
 <body>
     <h1>Felipe</h1>
-    <button id="increment">Click me</button>
-
+    <form id="message-form">
+        <input type="text" placeholder="Message" name="message">
+        <button>Broadcast</button>
+    </form>
 
     <!-- Client side socket.io library -->
     <script src="/socket.io/socket.io.js"></script>
