location link emit functioanlity

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
         <input type="text" placeholder="Message" name="message">
         <button>Broadcast</button>
     </form>
-
+    <button id="send-location">Send location</button>
     <!-- Client side socket.io library -->
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
