Set up front end buttons and input

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <title>Chat App</title>
 </head>
 <body>
-    <h1>Felipe</h1>
+    <h1>Chat</h1>
     <form id="message-form">
         <input type="text" placeholder="Message" name="message">
-        <button>Broadcast</button>
+        <button>Send</button>
     </form>
     <button id="send-location">Send location</button>
     <!-- Client side socket.io library -->
