--- a/public/index.html
+++ b/public/index.html
@@ -3,26 +3,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat App</title>
+    <link rel="icon" href="/img/favicon.png">
+    <link rel="stylesheet" href="/css/styles.min.css">
 </head>
 <body>
-    <h1>Chat</h1>
+    <div class="chat">
+        <div class="chat__sidebar">
 
-    <div id="messages"></div>
+        </div>
+        <div class="chat__main">
+            <div id="messages" class="chat__messages"></div>
 
-    <form id="message-form">
-        <input type="text" placeholder="Message" name="message">
-        <button>Send</button>
-    </form>
-    <button id="send-location">Send location</button>
+            <div class="compose">
+                <form id="message-form">
+                    <input type="text" placeholder="Message" name="message">
+                    <button>Send</button>
+                </form>
+                <button id="send-location">Send location</button>
+            </div>            
+        </div>
+    </div>
 
     <script id="message-template" type="text/html">
-        <div>
-            <p>{{createdAt}} - {{message}}</p>
+        <div class="message">
+            <p>
+                <span class="message__name">Rosie</span>
+                <span class="message_meta">{{createdAt}} - </span>
+            </p>
+            <p>{{message}}</p>
         </div>
     </script>
     <script id="location-message-template" type="text/html">
-        <div>
-            <p>{{createdAt}} - <a href="{{url}}" target="_blank">My current location</a></p>
+        <div class="message">
+            <p>
+                <span class="message__name">Rosie</span>
+                <span class="message_meta">{{createdAt}} - </span>
+            </p>
+            <p><a href="{{url}}" target="_blank">My current location</a></p>
         </div>
     </script>
 
