Tracking user leaving/coming back

--- a/public/chat.html
+++ b/public/chat.html
@@ -27,7 +27,7 @@
     <script id="message-template" type="text/html">
         <div class="message">
             <p>
-                <span class="message__name">Rosie</span>
+                <span class="message__name">Some User</span>
                 <span class="message_meta">{{createdAt}} - </span>
             </p>
             <p>{{message}}</p>
