--- a/public/chat.html
+++ b/public/chat.html
@@ -16,7 +16,7 @@
 
             <div class="compose">
                 <form id="message-form">
-                    <input type="text" placeholder="Message" name="message">
+                    <input type="text" placeholder="Message" name="message" required autocomplete="off">
                     <button>Send</button>
                 </form>
                 <button id="send-location">Send location</button>
@@ -27,7 +27,7 @@
     <script id="message-template" type="text/html">
         <div class="message">
             <p>
-                <span class="message__name">Some User</span>
+                <span class="message__name">{{username}}</span>
                 <span class="message_meta">{{createdAt}} - </span>
             </p>
             <p>{{message}}</p>
