--- a/public/chat.html
+++ b/public/chat.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="chat">
-        <div class="chat__sidebar">
+        <div class="chat__sidebar" id="sidebar">
 
         </div>
         <div class="chat__main">
@@ -41,6 +41,15 @@
             </p>
             <p><a href="{{url}}" target="_blank">My current location</a></p>
         </div>
+    </script>
+    <script id="sidebar-template" type="text/html">
+        <h2 class="room-title">{{room}}</h2>
+        <h3 class="list-title">Users</h3>
+        <ul class="users">
+            {{#users}}
+                <li><img src="./img/users.svg" alt="" style="height: 1rem;">    {{username}}</li>
+            {{/users}}
+        </ul>
     </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
