added Rosie (my dog) as admin; added case-sensitivity to room and username; users can keep typed out username and room; added two-digit minutes to time format

--- a/public/chat.html
+++ b/public/chat.html
@@ -36,7 +36,7 @@
     <script id="location-message-template" type="text/html">
         <div class="message">
             <p>
-                <span class="message__name">Rosie</span>
+                <span class="message__name">{{username}}</span>
                 <span class="message_meta">{{createdAt}} - </span>
             </p>
             <p><a href="{{url}}" target="_blank">My current location</a></p>
