--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
             <form action="/chat.html">
                 <label>Display name</label>
                 <input type="text" name="username" placeholder="Display name" required>
-                <label>Room</label>
+                <label>Room (case-sensitive)</label>
                 <input type="text" name="room" placeholder="Room" required>
                 <button>Join</button>
             </form>
